force-app/main/default/objects/forcerules__Crew_Member__c/forcerules__Crew_Member__c.object-meta.xml
<CustomObject>
    <label>Crew Member</label>
    <nameField>
        <displayFormat>CM{0000}</displayFormat>
        <label>Crew Member #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>