force-app/main/default/objects/forcerules__Crew_Member__c/fields/forcerules__Crew__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Crew__c</fullName>
    <label>Crew</label>
    <referenceTo>forcerules__Crew__c</referenceTo>
    <relationshipLabel>Crew Members</relationshipLabel>
    <relationshipName>Crew_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>