force-app/main/default/objects/forcerules__Crew_Member__c/fields/forcerules__Member__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Crew Members</relationshipLabel>
    <relationshipName>Crew_Members</relationshipName>
    <type>Lookup</type>
</CustomField>