force-app/main/default/objects/forcerules__Crew_Member__c/fields/forcerules__Order__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>